# vs-dfttest2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  dfttest.py  dfttest2.py
.github/workflows/: linux.yml  linux_arm64.yml  windows.yml  windows_arm64.yml
cpu_source/: CMakeLists.txt  cpu_dispatch.h.in  dfttest2_cpu.h  getframe_impl.cpp  kernel.hpp  source.cpp
cuda_source/: kernel.hpp  source.cpp  win32.cpp
gcc_source/: CMakeLists.txt  dfttest2_cpu.h  getframe_impl.cpp  kernel.hpp  source.cpp
hip_source/: kernel.hpp  source.cpp
hiprtc_source/: dft_kernels.hpp  kernel.hpp  source.cpp
nvrtc_source/: dft_kernels.hpp  kernel.cu  kernel.hpp  source.cpp
scripts/: dfttest.py
source/: kernel.hpp  source.cpp
